--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
+body {
+    padding: 0 10px;
+}
 .ant-menu-horizontal .ant-menu-item {
     width: 20%;
     text-align: center;
 }
 
 .footer {
-    width: 100%;
     padding: 20px 0;
     background: #f3ecec;
     text-align: center;
-    position: absolute;
-    bottom: 0;
 }
